--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-PORT = 5000
+DB_URL=mongodb://user:user@cluster0-shard-00-00.fo3dv.mongodb.net:27017,cluster0-shard-00-01.fo3dv.mongodb.net:27017,cluster0-shard-00-02.fo3dv.mongodb.net:27017/city?ssl=true&replicaSet=atlas-11mxv2-shard-0&authSource=admin&retryWrites=true&w=majority
+PORT=5000
